--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
         <h1 class=myName>Trevis Kaiser</h1>    
             
         <ul class="panel">
-            <li><a href=index.html>About</a></li>
-            <li>|</li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li>|</li>
             <li><a href=contact.html>Contact</a></li>
+            <li>|</li>
+            <li><a href=portfolio.html>Portfolio</li>
+            <li>|</li>
+            <li><a href=index.html>About</a></li>
         </ul>         
     </header>
 
