--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <title>Trevis Kaiser's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 
 <body>
     <header>
-        <h1 class=myName>Trevis Kaiser</h1>    
+        <h1 class="myName">Trevis Kaiser</h1>    
             
         <ul class="panel">
                 <li><a href=contact.html>Contact</a></li>
@@ -44,6 +45,7 @@
         </section>
 
     </section>
+
     <footer></footer>
 </body>
 
