--- a/contact.html
+++ b/contact.html
@@ -9,19 +9,19 @@
 
 <body>
     <header>
-        <h1 class=myName>Trevis Kaiser</h1>    
+        <h1 class="myName">Trevis Kaiser</h1>    
             
         <ul class="panel">
             <li><a href=contact.html>Contact</a></li>
             <li>|</li>
-            <li><a href=portfolio.html>Portfolio</li>
+            <li><a href=portfolio.html>Portfolio</a></li>
             <li>|</li>
             <li><a href=index.html>About</a></li>
         </ul>         
     </header>
 
 
-    <section class= "Opening">
+    <section class="Opening">
 
         <h2>Contact</h2>
 
