--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1 class=myName>Trevis Kaiser</h1>    
+        <h1 class="myName">Trevis Kaiser</h1>    
             
         <ul class="panel">
             <li><a href=contact.html>Contact</a></li>
@@ -24,16 +24,16 @@
         <section class= "Opening">
 
             <h2>Portfolio</h2>
-
-                <figure class="box">Box 1</figure>
-                <figure class="box box-2">Box 2</figure>
-                <figure class="box box-3">Box 3</figure>
-                <figure class="box box-4">Box 4</figure>
-                <figure class="box box-5">Box 5</figure>
-                <figure class="box box-6">Box 5</figure>
-                <figure class="box box-7">Box 5</figure>
-                <figure class="box box-8">Box 5</figure>
-        
+                <div class="box-set">
+                    <figure class="box box-1"></figure>
+                    <figure class="box box-2"></figure>
+                    <figure class="box box-3"></figure>
+                    <figure class="box box-4"></figure>
+                    <figure class="box box-5">Example 1</figure>
+                    <figure class="box box-6">Example 2</figure>
+                    <figure class="box box-7">Example 3</figure>
+                    <figure class="box box-8">Example 4</figure>
+                </div>
         </section>
     <footer></footer>
 </body>
