--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         <h2>About Me</h2>
 
         <div>
-            <img src="./assets/images/file-1.jpeg">
+            <img class ="myPicture" src="./assets/images/file-1.jpeg">
         </div>
                 
         <section class="bodyText">
-            <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit consequat ullamcorper. Mauris sit amet ante
+            <p >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit consequat ullamcorper. Mauris sit amet ante
                 egestas, commodo mauris at, egestas turpis. Suspendisse in scelerisque quam. Quisque tortor nibh, ultrices porta
                 ipsum vel, accumsan semper felis. Sed imperdiet facilisis ipsum, sed viverra erat blandit interdum. Interdum et
                 malesuada fames ac ante ipsum primis in faucibus. Duis sagittis egestas velit, at iaculis orci aliquet aliquam.
